
        place_spot_order():
            Added documentation explaining all spot and margin orders, funcs parameters and correct formatting of response.

        place_futures_order():
            Added documentation explaining nearly all possible futures orders, funcs parameters and correct formatting of response.

        place_conditional_order():
            Added documentation explaining nearly all conditional orders, funcs parameters and correct formatting of response.

        close_order():
            Added documentation explaining how to close linear positions, their funcs parameters and correct formatting of response.

        cancel_order():
            Added documentation explaining how to cancel orders, their funcs parameters and correct formatting of response.

        cancel_all_orders():
            Added documentation explaining how to cancel orders, their funcs parameters and correct formatting of response.   

    Account:
        get_account_info():
            Added possibility to display human readable type of account and type of margin mode, or raw request response.




        
Mic:
    account:
        get_wallet_balance():
            Added possibility to display pie chart of wallet balance for jupyter notebooks, possibiity to display raw request response
            or display a formatted more readable response. 
            Added documentation: now you can see that accountType is a required parameter. 

    Market:
        get_kline():
            Added possibility to display plot of closed price and volume for jupyter notebooks, possibiity to display raw request response,
            also to provide the link to the Bybit Kline page and possibilty to save the Kline data as a CSV file.

        get_mark_price_kline():
            Same as get_kline(), but without link available.
            
        get_index_price_kline():
            Same as get_kline(), but without link available.