@@ -1,2 +1,7 @@
 # portfolio_management
 The project develops Python functions to integrate with the Bybit API, automating portfolio management by executing trades, monitoring markets, and rebalancing positions.
+
+1) Installation Instructions:
+
+
+2) Usage examples
