@@ -55,11 +55,12 @@ Mic:
 
     Market:
         get_kline():
-            Added possibility to display plot of closed price and volume for jupyter notebooks, possibiity to display raw request response,
+            Added possibility to display plot of closed price and volume for jupyter notebooks, possibiity to display raw request response
+            or to provide a formatted response which shows a list containing all the prices of a determined type (open, low, high or close),
             also to provide the link to the Bybit Kline page and possibilty to save the Kline data as a CSV file.
 
         get_mark_price_kline():
             Same as get_kline(), but without link available.
-            
+
         get_index_price_kline():
             Same as get_kline(), but without link available.
